Fix container height and white space glitch

--- a/src/css/RarityGuide.css
+++ b/src/css/RarityGuide.css
@@ -128,13 +128,14 @@
     
     .RarityTextContainer{
         padding-top: 20%;
-        width: 40%;
         position: absolute;
-        margin-left: 70%;
         color: white;
         padding-top: 2%;
         visibility: hidden;
-        
+        overflow-x: hidden;
+        margin: 0%;
+        padding: 0%;
+        font-size: 0px;
     }
     
     .RarityGuideTitle{
