--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -21,7 +21,7 @@
   }
   
   .App-header {
-    min-height: 60vh;
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
